ebank-monolith/jenkins/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ebank
  labels:
    app: ebank-monolith
    environment: local
